0.0.8/_sources/generated/spdl.io.rst.txt
..
   Custom template for our custom_autosummary.
   The purpose of using custom_autosummary is list the entries on
   the right side bar instead of the left side bar.
   This is achieved with the combination of custom directive, template and CSS.

   The `custom_autosummary` directive functions mostly like `autosummary`. We
   pass `:toctree:` option to generate a doc page for each entry, but we use
   our custom `:hide_from_toctree:` option so as not to attach them in ToC tree.

   This template inserts a section header for each entry, so that they show up
   in the right-side bar. The headers are hidden by CSS.

   Because each entry will have its own table and their borders no longer match,
   table borders are hidden by CSS and instead we use horizontal line.

.. raw:: html

   <div class="custom_autosummary">

spdl.io
=======

Overview
--------

.. automodule:: spdl.io

API Reference
-------------

..
   ############################################################################
   Functions
   ############################################################################



.. rubric:: Functions


load\_audio
^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.load_audio


load\_video
^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.load_video


load\_image
^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.load_image


load\_image\_batch
^^^^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.load_image_batch


load\_image\_batch\_nvjpeg
^^^^^^^^^^^^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.load_image_batch_nvjpeg


sample\_decode\_video
^^^^^^^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.sample_decode_video


demux\_audio
^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.demux_audio


demux\_video
^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.demux_video


demux\_image
^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.demux_image


decode\_packets
^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.decode_packets


decode\_packets\_nvdec
^^^^^^^^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.decode_packets_nvdec


streaming\_decode\_packets
^^^^^^^^^^^^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.streaming_decode_packets


decode\_image\_nvjpeg
^^^^^^^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.decode_image_nvjpeg


get\_audio\_filter\_desc
^^^^^^^^^^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.get_audio_filter_desc


get\_video\_filter\_desc
^^^^^^^^^^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.get_video_filter_desc


get\_filter\_desc
^^^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.get_filter_desc


convert\_array
^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.convert_array


convert\_frames
^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.convert_frames


transfer\_buffer
^^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.transfer_buffer


transfer\_buffer\_cpu
^^^^^^^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.transfer_buffer_cpu


to\_numba
^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.to_numba


to\_numpy
^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.to_numpy


to\_torch
^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.to_torch


to\_jax
^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.to_jax


encode\_image
^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.encode_image


demux\_config
^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.demux_config


decode\_config
^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.decode_config


encode\_config
^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.encode_config


cuda\_config
^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.cuda_config


cpu\_storage
^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.cpu_storage


load\_npz
^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.load_npz


load\_npy
^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.load_npy





..
   ############################################################################
   Attributes
   ############################################################################





..
   ############################################################################
   Classes
   ############################################################################



.. rubric:: Classes


Demuxer
^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:
   :template: _custom_autosummary_class.rst

   ~spdl.io.Demuxer


Packets
^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:
   :template: _custom_autosummary_class.rst

   ~spdl.io.Packets


AudioPackets
^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:
   :template: _custom_autosummary_class.rst

   ~spdl.io.AudioPackets


VideoPackets
^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:
   :template: _custom_autosummary_class.rst

   ~spdl.io.VideoPackets


ImagePackets
^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:
   :template: _custom_autosummary_class.rst

   ~spdl.io.ImagePackets


Frames
^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:
   :template: _custom_autosummary_class.rst

   ~spdl.io.Frames


AudioFrames
^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:
   :template: _custom_autosummary_class.rst

   ~spdl.io.AudioFrames


VideoFrames
^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:
   :template: _custom_autosummary_class.rst

   ~spdl.io.VideoFrames


ImageFrames
^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:
   :template: _custom_autosummary_class.rst

   ~spdl.io.ImageFrames


CPUBuffer
^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:
   :template: _custom_autosummary_class.rst

   ~spdl.io.CPUBuffer


CUDABuffer
^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:
   :template: _custom_autosummary_class.rst

   ~spdl.io.CUDABuffer


DemuxConfig
^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:
   :template: _custom_autosummary_class.rst

   ~spdl.io.DemuxConfig


DecodeConfig
^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:
   :template: _custom_autosummary_class.rst

   ~spdl.io.DecodeConfig


EncodeConfig
^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:
   :template: _custom_autosummary_class.rst

   ~spdl.io.EncodeConfig


CUDAConfig
^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:
   :template: _custom_autosummary_class.rst

   ~spdl.io.CUDAConfig


CPUStorage
^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:
   :template: _custom_autosummary_class.rst

   ~spdl.io.CPUStorage


NpzFile
^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:
   :template: _custom_autosummary_class.rst

   ~spdl.io.NpzFile





..
   ############################################################################
   Exceptions
   ############################################################################





..
   ############################################################################
   Sub modules
   ############################################################################





..
   ############################################################################
   Others
   ############################################################################




















































.. raw:: html

   </div>